src/imguics/DCImGui.cs

    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderFloat3([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, float v_min, float v_max);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderFloat4Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderFloat4([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, float v_min, float v_max);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderAngleEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v_rad, float v_degrees_min, float v_degrees_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderAngle([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v_rad);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderIntEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderInt([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, int v_min, int v_max);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderInt2Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderInt2([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, int v_min, int v_max);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderInt3Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderInt3([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, int v_min, int v_max);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderInt4Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderInt4([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, int v_min, int v_max);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderScalarEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int data_type, System.IntPtr p_data, System.IntPtr p_min, System.IntPtr p_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderScalar([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int data_type, System.IntPtr p_data, System.IntPtr p_min, System.IntPtr p_max);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderScalarNEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int data_type, System.IntPtr p_data, int components, System.IntPtr p_min, System.IntPtr p_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_SliderScalarN([MarshalAs(UnmanagedType.LPUTF8Str)] string label, int data_type, System.IntPtr p_data, int components, System.IntPtr p_min, System.IntPtr p_max);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_VSliderFloatEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImVec2 size, System.IntPtr v, float v_min, float v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_VSliderFloat([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImVec2 size, System.IntPtr v, float v_min, float v_max);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_VSliderIntEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImVec2 size, System.IntPtr v, int v_min, int v_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_VSliderInt([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImVec2 size, System.IntPtr v, int v_min, int v_max);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_VSliderScalarEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImVec2 size, int data_type, System.IntPtr p_data, System.IntPtr p_min, System.IntPtr p_max, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_VSliderScalar([MarshalAs(UnmanagedType.LPUTF8Str)] string label, ImVec2 size, int data_type, System.IntPtr p_data, System.IntPtr p_min, System.IntPtr p_max);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputTextEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr buf, System.IntPtr buf_size, int flags, System.IntPtr callback, System.IntPtr user_data);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputText([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr buf, System.IntPtr buf_size, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputTextMultilineEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr buf, System.IntPtr buf_size, ImVec2 size, int flags, System.IntPtr callback, System.IntPtr user_data);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputTextMultiline([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr buf, System.IntPtr buf_size);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputTextWithHintEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, [MarshalAs(UnmanagedType.LPUTF8Str)] string hint, System.IntPtr buf, System.IntPtr buf_size, int flags, System.IntPtr callback, System.IntPtr user_data);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputTextWithHint([MarshalAs(UnmanagedType.LPUTF8Str)] string label, [MarshalAs(UnmanagedType.LPUTF8Str)] string hint, System.IntPtr buf, System.IntPtr buf_size, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputFloatEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, float step, float step_fast, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputFloat([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputFloat2Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputFloat2([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputFloat3Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputFloat3([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputFloat4Ex([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, [MarshalAs(UnmanagedType.LPUTF8Str)] string format, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputFloat4([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputIntEx([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, int step, int step_fast, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputInt([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputInt2([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputInt3([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, int flags);
    [DllImport(LIB, CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool ImGui_InputInt4([MarshalAs(UnmanagedType.LPUTF8Str)] string label, System.IntPtr v, int flags);
